# itmo-algos

./: CMakeLists.txt
data_structures/: cars.cpp  goblins.cpp  memory_manager.cpp  section.cpp
graphs/: cheating.cpp  civilization.cpp  flights.cpp  pigs.cpp
introduction/: agronomist.cpp  config.cpp  professor.cpp  zoo.cpp
sorting/: cows.cpp  market.cpp  nightmare.cpp  number.cpp
