cmake_minimum_required(VERSION 3.23)
project(itmo_algos)

set(CMAKE_CXX_STANDARD 14)

add_executable(agronomist introduction/agronomist.cpp)
add_executable(zoo introduction/zoo.cpp)
add_executable(config introduction/config.cpp)
add_executable(professor introduction/professor.cpp)
add_executable(cows sorting/cows.cpp)
add_executable(market sorting/market.cpp)
add_executable(nightmare sorting/nightmare.cpp)
add_executable(number sorting/number.cpp)
add_executable(cars data_structures/cars.cpp)
add_executable(goblins data_structures/goblins.cpp)
add_executable(memory_manager data_structures/memory_manager.cpp)
add_executable(section data_structures/section.cpp)
